--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
         - "{{ ansible_distribution | lower }}.yml"
         - "{{ ansible_os_family | lower }}.yml"
       paths: "../vars"
-      skip: true
+      errors: ignore
 
 - name: Ensure all tasks based on the distribution are loaded
   include_tasks: "{{ item }}"
