--- a/tasks/install_coco_guacamole.yml
+++ b/tasks/install_coco_guacamole.yml
@@ -50,6 +50,12 @@
     enabled: yes
   when: _docker_config_file.changed
 
+- name: Ensure Docker started
+  service:
+    name: docker
+    state: started
+    enabled: yes
+
 - name: Start a jms_koko container
   docker_container:
     name: jms_koko
